Fixed flickering error on ingredient dropdown when typing an input which is longer than the first ingredient on the dropdown list while there are more ingredients still listed underneath, this is done with some length related checks. Also fixed the issue with blurry text on startUnit dropdown, turns out the issue was related to the backface visibility property on the dropdown arrow, I added some state checks to the endUnit dropdown arrow to remove and re-add this property when appropriate so other dropdowns will have crisp unblurry text

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,9 @@ input:focus {
   bottom: 5%;
   pointer-events: none;
   transition: .25s ease;
+}
+
+.backfaceProp {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
